--- a/style.css
+++ b/style.css
@@ -108,9 +108,88 @@ h1{
     color: #fff;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
 }
+.menu{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+}
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
+}
 
+.modal-content {
+    background: #353442;
+    padding: 20px;
+    border-radius: 8px;
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+    color: #fff;
+}
+
+.modal.visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    color: #fff;
+    cursor: pointer;
+}
+
+#imagePreview {
+    margin-top: 15px;
+}
+
+#imagePreview img {
+    max-width: 100%;
+    border-radius: 8px;
+}
+.modal-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #7C2E61;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.modal-btn:hover {
+    background-color: #9B3B7C;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.modal-btn:focus {
+    outline: none;
+    box-shadow: 0 0 10px rgba(124, 46, 97, 0.8);
+}
 
 @media (max-width: 768px) {
+    .container {
+        padding: 50px 15px;
+    }
+
     .search-bar {
         max-width: 100%;
         float: none;
@@ -156,6 +235,15 @@ h1{
         font-weight: bold;
         color: #fff;
         margin-right: 10px;
+    }
+    .menu {
+        gap: 22px;
+    }
+    .search-bar input {
+        margin-bottom: 20px;
+    }
+    .modal-content {
+        width: 75%;
     }
 }
 
